--- a/src/asset/css/App.css
+++ b/src/asset/css/App.css
@@ -9,6 +9,7 @@ html {
 }
 body {
   background-color: #bfe0e9e0;
+  padding-bottom: 50px;
 }
 input {
   border: 0;
@@ -38,7 +39,7 @@ header {
 header a {
   color: rgb(74, 66, 66);
   display: block;
-  line-height: 1;
+  line-height: .6;
   padding-left: 20px;
   text-decoration: none;
 }
@@ -52,31 +53,92 @@ header button {
 }
 
 /* Content */
+.content .sort {
+  padding-bottom: 20px;
+  text-align: right;
+}
 .content ul {
   align-items: center;
   display: inline-flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  margin-left: 20px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding-inline-start: 0;
 }
 .content li {
-  background-color: rgba(255,255,255,.7);
+  background-color: rgba(255,255,255,.5);
   border-radius: 3px;
-  box-shadow: 0 5px 5px rgba(0,0,0,.4);
-  color: #666;
+  box-shadow: 0 5px 5px rgba(0,0,0,.2);
+  color: #333;
+  line-height: 1.5;
   list-style: none;
+  margin-bottom: 30px;
+  min-height: 180px;
+  display: block;
+  position: relative;
 }
-.content li {
-  display: inline-flex;
-  justify-content: space-between;
-  align-items: center;
+.content li:hover {
+  animation: reStyle .2s linear forwards;
 }
-.content li .avater {
-  background: #333;
+.content li:hover .name {
+  color: #666;
+}
+@keyframes reStyle {
+  from {
+    background-color: rgba(255,255,255,.5);
+    top:0;
+  }
+  to {
+    background-color: #fff;
+    top: -10px;
+  }
+}
+.content li div:nth-child(2) {
+  margin: 30px 10px 20px 80px;
+}
+.content li div:nth-child(3) .btn {
+  position: absolute;
+  bottom: 10px;
+}
+.content li div:nth-child(3) .btn-del {
+  left: 10px;
+}
+.content li div:nth-child(3) .btn-edit {
+  right: 10px;
+}
+.content li span {
+  clear: both;
+  display: block;
+}
+.content li span.name {
+  color: #999;
+  font-size: 1.2em;
+  font-weight: bold;
+  right: 10px;
+  position: absolute;
+  top: 5px;
+}
+.content li span.avatar {
+  background: linear-gradient(140deg, rgb(219, 219, 219) 0%, rgba(204,204,204,1) 100%);
+  border: 3px solid  rgba(255,255,255,.5);
+  border-radius: 100%;
+  content:' ';
+  display: block;
+  height: 70px;
+  left: -10px;
+  position: absolute;
+  top: -10px;
+  width: 70px;
 }
 .content li small {
-  background: #333;
+  color: #999;
+  display: block;
 }
 
 
+/* Add contact */
 .fade {
   background-color: #bfe0e9e3;
   bottom: 0;
@@ -89,13 +151,6 @@ header button {
   top: 0;
   width: 100vw;
   z-index: 3;
-}
-.fade.hide {
-  opacity: 0;
-  pointer-events:none;
-}
-.fade.showing {
-  opacity: 1;
 }
 .fade form {
   background-color: rgba(255,255,255,.7);
@@ -148,14 +203,32 @@ header button {
 
 
 /* RWD */
-@media all and (min-width: 992px) {
+@media all and (min-width: 1080px) {
   header,
   .content {
     padding: 20px;
   }
+  .content ul {
+    width: 98%;
+  }
   .content li {
+    max-width: 23%;
+    min-width: 23%;
+    width: 23%;
+  }
+}
+@media all and (min-width: 640px) and (max-width: 1079px) {
+  header,
+  .content {
     padding: 10px;
-    width: 25%;
+  }
+  .content ul {
+    width: 95%;
+  }
+  .content li {
+    max-width: 44%;
+    min-width: 44%;
+    width: 44%;
   }
 }
 @media all and (min-width: 640px) {
@@ -163,30 +236,36 @@ header button {
     border-left: 10px solid rgb(255, 213, 0);
   }
 }
-@media all and (min-width: 640px) and (max-width: 991px) {
-  header,
-  .content {
-    padding: 10px;
-  }
-  .content li {
-    padding: 10px;
-    width: 45%;
-  }
-}
 @media all and (max-width: 639px) {
+  header {
+    display: block;
+    position: relative;
+  }
   header a {
     border-top: 10px solid rgb(255, 213, 0);
     display: block;
+    padding: 0;
     text-align: center;
   }
-  header {
-    display: block;
+  header .btn {
+    position: absolute;
+    right: 26px;
+    top: 30px;
+  }
+  .content .sort {
+    margin: 20px 0 0 0;
+    text-align: center;
+  }
+  .content ul {
+    width: 95%;
   }
   .content li {
-    margin: auto;
-    min-width: 300px;
-    padding: 3px;
-    width: 95%;
+    margin: auto auto 30px auto;
+    min-width: 280px;
+    width: 90%;
+  }
+  .content li .name {
+    left: 80px;
   }
   input {
     margin: auto;
